UIの更新。UTF8の文字コード処理の修正。

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ app/release/
 
 app/.cxx/
 fileselect/build/
+app/src/main/cpp/tests/objs
+app/src/main/cpp/tests/modtest
+app/src/main/cpp/tests/compile
